--- a/styles/desktop-xl.css
+++ b/styles/desktop-xl.css
@@ -33,6 +33,10 @@
         padding: 0.8em;
         display: inline-block;
       }
+
+      .content-item h1, h2, h3, h4, h5, h6, i {
+        color: var(--c-magenta);
+      }
     
       .index {
         margin: 12em auto;
