--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -10,7 +10,7 @@
     display: block;
     flex: 0 0 3.6em;
     height: auto;
-    fill: var(--c-magenta);
+    fill: var(--c-primary);
   }
 
   .categorie .link-disabled svg {
@@ -34,6 +34,10 @@
     display: inline-block;
   }
 
+  .content-item h1, h2, h3, h4, h5, h6, i {
+    color: var(--c-primary);
+  }
+
   .index {
     margin: 6em auto;
   }
@@ -44,7 +48,7 @@
     height: auto;
     display: inline-block;
     margin: 0;
-    background-color: var(--c-magenta);
+    background-color: var(--c-primary);
     position: fixed;
     left: 0;
     bottom: 0;
@@ -55,7 +59,7 @@
     display: block;
     width: 100vw;
     height: 3vh;
-    background-image: linear-gradient(90deg, #b9005f01 0 5%, var(--c-magenta) 95%);
+    background-image: linear-gradient(90deg, #b9005f01 0 5%, var(--c-primary) 95%);
     margin-top: -3vh;
   }
 
@@ -93,7 +97,7 @@
     width: auto;
     padding: 0.4em;
     margin: 0.8em;
-    color: var(--c-white);
+    color: var(--c-light);
   }
 
   #desktop {
@@ -115,7 +119,7 @@
     width: 50%;
     height: 3em;
     display: block;
-    background-color: #fff;
+    background-color: var(--c-default);
     margin: 0;
     border-radius: 3em 10em 0 0;
   }
@@ -125,7 +129,7 @@
     width: 3em;
     height: 3em;
     display: block;
-    background-color: #eee;
+    background-color: var(--c-accent-primary);
     margin: 0 0 0 -0.8em;
     border-radius: 0 5em 0 5em;
     z-index: 1;
@@ -136,7 +140,7 @@
     width: 3em;
     height: 2em;
     display: block;
-    background-color: #fff;
+    background-color: var(--c-default);
     margin: 0 0 0 -3em;
     border-radius: 2em 5em 0 0;
     z-index: 0;
@@ -156,9 +160,12 @@
   #after-curve {
     width: 100vw;
     height: 2.5em;
-    background-color: #fff;
+    background-color: var(--c-default);
     float: inline-end;
-    position: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+
   }
 
   .wrapper {
@@ -226,8 +233,6 @@
     font-size: 1.5em;
   }
 
-  p {
-    color: #444;
-  }
+
 
 }
